--- a/databinding_demo/src/main/AndroidManifest.xml
+++ b/databinding_demo/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest package="com.example.databinding_demo"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +21,7 @@
         <activity android:name=".findview.SimpleDataBindingActivity"/>
         <activity android:name=".findview.SimpleDataBinding02Activity"/>
         <activity android:name=".simple_data.SimpleDataActivity"/>
+        <activity android:name=".simple_image.SimpleImageActivity"/>
     </application>
 
 </manifest>
