编写mqttclient的代码

--- a/databinding_demo/src/main/AndroidManifest.xml
+++ b/databinding_demo/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".findview.SimpleDataBinding02Activity"/>
         <activity android:name=".simple_data.SimpleDataActivity"/>
         <activity android:name=".simple_image.SimpleImageActivity"/>
+        <activity android:name=".simple_image_hold_error.HolderImageActivity"/>
     </application>
 
 </manifest>
