保存一下代码

--- a/test_mqtt/build.gradle
+++ b/test_mqtt/build.gradle
@@ -1,12 +1,11 @@
-apply plugin: 'com.android.library'
-
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "26.0.0"
-
+    buildToolsVersion "25.0.0"
 
     defaultConfig {
+        applicationId "dhcc.com.cn.test_mqtt"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
@@ -28,9 +27,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.+'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
-    compile 'com.google.code.gson:gson:2.8.1'
-    compile 'com.orhanobut:logger:2.1.1'
+    compile project(':mqttretrofit')
 }
