保存一下代码

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':databinding_demo', ':mqttretrofit', ':test_mqtt'
+include ':app', ':databinding_demo', ':mqttretrofit', ':test_mqtt', ':aspectjx'
