--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
     dataBinding {
         enabled true
     }
+    dexOptions {
+        incremental true
+    }
 }
 
 dependencies {
@@ -37,4 +40,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'io.reactivex:rxjava:1.3.0'
+    compile 'com.netflix.rxjava:rxjava-async-util:0.20.7'
+    compile 'io.reactivex:rxandroid:1.2.1'
 }
