--- a/architecture_components/build.gradle
+++ b/architecture_components/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "26.0.1"
 
     defaultConfig {
-        applicationId "dhcc.cn.com.fragment_communication"
+        applicationId "dhcc.cn.com.architecture_components"
         minSdkVersion 14
         targetSdkVersion 26
         versionCode 1
@@ -20,6 +20,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
@@ -30,6 +34,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.android.support:design:26.0.0-alpha1'
 }
